# internal/handler/department.go
@@ -133,9 +133,10 @@ func (h *DepartmentHandler) Delete(c *gin.Context) {
 // @Summary 绑定用户到部门
 // @Tags 部门
 // @Accept  json
-// @Params data body dto.DeleteIds
+// @Params data params id
+// @Params data body dto.UsersIds
 // @Success 200  {object} dto.Response[any]
-// @Router /api/department/:id/users [delete]
+// @Router /api/department/{id}/users [post]
 func (h *DepartmentHandler) BindUser(c *gin.Context) {
 	var ids dto.UsersIds
 	paramsId := c.Param("id")
